[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://starwars.jpeg" type="Texture" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
margin_left = -144.0
margin_top = 344.0
margin_right = -56.0
margin_bottom = 344.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.538
anchor_bottom = 0.5
margin_right = 159.0
margin_bottom = 34.0
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 185.0
margin_bottom = 20.0
text = "START"
__meta__ = {
"_editor_description_": ""
}

[node name="Instructions" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 185.0
margin_bottom = 44.0
text = "INSTRUCCIONES"

[node name="Creditos" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 185.0
margin_bottom = 68.0
text = "CREDITOS"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 8, 412 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 300, -12 )
scale = Vector2( 0.329167, 0.777778 )
texture = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
